Change domain name in logo.

--- a/src/Sylius/Bundle/WebBundle/Resources/translations/messages.ru.xlf
+++ b/src/Sylius/Bundle/WebBundle/Resources/translations/messages.ru.xlf
@@ -808,7 +808,7 @@
       </trans-unit>
       <trans-unit id="0d2f8b16705b1d604ce78637fb0e87ab" resname="sylius.logo">
         <source>sylius.logo</source>
-        <target>Santechmrkt.by</target>
+        <target>Santehmarkt.by</target>
       </trans-unit>
       <trans-unit id="sylius.na" resname="sylius.na">
         <source>sylius.na</source>
